--- a/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
+++ b/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -200,7 +200,6 @@
       ],
       "source": [
         "\n",
-        "from transformers import AutoModelForSequenceClassification\n",
         "\n",
         "def print_trainable_parameters(model):\n",
         "    \"\"\"\n",
@@ -761,9 +760,9 @@
         "from transformers import Trainer\n",
         "\n",
         "\n",
-        "# Custom Trainer to combine Weighted MSE + contrastive loss\n",
+        "# Custom Trainer to combine Weighted SmoothL1 + contrastive loss\n",
         "class CustomTrainer(Trainer):\n",
-        "    def __init__(self, *args, cont_weight=0.2, uncertainty_scale=0.5, **kwargs): # AUMENTA A 3.0\n",
+        "    def __init__(self, *args, cont_weight=0.2, uncertainty_scale=0.5, **kwargs): \n",
         "        super().__init__(*args, **kwargs)\n",
         "        self.cont_weight = cont_weight\n",
         "        self.uncertainty_scale = uncertainty_scale\n",
@@ -790,10 +789,9 @@
         "        else:\n",
         "            smooth_l1_loss = outputs.get(\"loss\")\n",
         "\n",
-        "        # 3. Weighted Contrastive Loss (NUOVO)\n",
+        "        # 3. Weighted Contrastive Loss \n",
         "        embeddings = outputs.get(\"embeddings\", None)\n",
         "        if embeddings is not None and labels is not None:\n",
-        "            # Passiamo i pesi anche qui!\n",
         "            cont_loss = weighted_contrastive_loss(embeddings, labels, weights)\n",
         "            loss = smooth_l1_loss + self.cont_weight * cont_loss\n",
         "        else:\n",
