--- a/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
+++ b/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -23,7 +23,7 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
-        "from transformers import T5EncoderModel, T5Tokenizer, AutoTokenizer, PreTrainedModel # Added this import\n",
+        "from transformers import T5EncoderModel, AutoTokenizer # Added this import\n",
         "from datasets import load_dataset, Dataset\n",
         "from peft import LoraConfig, get_peft_model, TaskType\n",
         "from sklearn.metrics import mean_squared_error, accuracy_score\n",
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "uiKUfotM8t9c"
       },
@@ -100,7 +100,6 @@
         "\n",
         "        # Mean pooling with safety checks\n",
         "        last_hidden = outputs.last_hidden_state  # [batch, seq_len, hidden]\n",
-        "        # Debug: Check for NaN in encoder output\n",
         "        if self.forward_count <= 3 or torch.isnan(last_hidden).any():\n",
         "            print(f\"\\n🔍 Forward pass #{self.forward_count}\")\n",
         "            print(f\"  Encoder output shape: {last_hidden.shape}\")\n",
@@ -215,9 +214,9 @@
         "        f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param:.2f}\"\n",
         "    )\n",
         "\n",
-        "# Caricamento del modello FlanT5 Encoder - USA BASE\n",
-        "print(\"Caricamento del modello FlanT5 Encoder (base version)...\")\n",
-        "model_name = \"google/flan-t5-xl\"  # Torniamo a base\n",
+        "# Caricamento del modello FlanT5 Encoder \n",
+        "print(\"Caricamento del modello FlanT5 Encoder (xl version)...\")\n",
+        "model_name = \"google/flan-t5-xl\"  \n",
         "\n",
         "model= T5EncoderForRegression(model_name)\n",
         "\n",
@@ -226,14 +225,14 @@
         "\n",
         "# Configurazione LoRA - rank ridotto per memoria\n",
         "lora_config = LoraConfig(\n",
-        "    task_type=TaskType.FEATURE_EXTRACTION,  # Usa FEATURE_EXTRACTION per encoder\n",
+        "    task_type=TaskType.FEATURE_EXTRACTION,  \n",
         "    r=32,\n",
         "    lora_alpha=64,\n",
         "    lora_dropout=0.2,\n",
-        "    target_modules=[\"q\", \"v\", \"k\",\"o\"],  # Query e Value delle attention\n",
+        "    target_modules=[\"q\", \"v\", \"k\",\"o\"],  \n",
         "    bias=\"none\",\n",
         "    inference_mode=False,\n",
-        "    modules_to_save=[\"regressor\"]  # Aggiungi il nuovo modulo\n",
+        "    modules_to_save=[\"regressor\"]  \n",
         ")\n",
         "\n",
         "model.encoder = get_peft_model(model.encoder, lora_config)\n",
@@ -290,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "_AfChODO_8Nr"
       },
@@ -301,18 +300,18 @@
         "\n",
         "    model_inputs = tokenizer(\n",
         "        prompt,\n",
-        "        max_length=320,  # Piccolo aumento\n",
+        "        max_length=320,\n",
         "        truncation=True,\n",
         "        padding='max_length',\n",
         "        return_tensors=None\n",
         "    )\n",
         "\n",
-        "    # Handle labels with proper validation\n",
+        "    \n",
         "    labels = []\n",
         "    stdevs = []\n",
         "\n",
         "    for i, v in enumerate(examples[\"average\"]):\n",
-        "        # Handle None, NaN, or missing values\n",
+        "        \n",
         "        if v is None or (isinstance(v, float) and np.isnan(v)):\n",
         "            labels.append(3.0)  # Default value\n",
         "        else:\n",
@@ -633,7 +632,7 @@
         "train_dataset = train_dataset.map(\n",
         "    preprocess_function,\n",
         "    batched=True,\n",
-        "    remove_columns=['choices', 'nonsensical', 'sample_id']  # Rimuovi solo colonne non necessarie\n",
+        "    remove_columns=['choices', 'nonsensical', 'sample_id']  \n",
         ")\n",
         "\n",
         "dev_dataset = dev_dataset.map(\n",
@@ -642,7 +641,7 @@
         "    remove_columns=['choices', 'nonsensical', 'sample_id']\n",
         ")\n",
         "\n",
-        "# Set format - INCLUDE stdev so it's available during evaluation\n",
+        "\n",
         "train_dataset.set_format(type='torch', columns=['input_ids', 'attention_mask', 'labels','stdev'])\n",
         "dev_dataset.set_format(type='torch', columns=['input_ids', 'attention_mask', 'labels','stdev'])\n",
         "\n",
@@ -658,7 +657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "Q_JKwIiSXurb"
       },
@@ -666,23 +665,20 @@
       "source": [
         "def weighted_contrastive_loss(embeddings, labels, weights):\n",
         "    \"\"\"\n",
-        "    Contrastive loss pesata: le coppie con bassa affidabilità contano meno.\n",
+        "    Weighted contrastive loss that penalizes pairs with low weights more.\n",
         "    \"\"\"\n",
-        "    # Normalizza embeddings\n",
         "    embeddings = F.normalize(embeddings, dim=1)\n",
         "\n",
-        "    # Calcola matrici distanze\n",
+        "    \n",
         "    emb_dist = torch.cdist(embeddings, embeddings, p=2)\n",
         "    labels = labels.view(-1, 1)\n",
         "    label_dist = torch.cdist(labels, labels, p=1)\n",
         "    label_dist = label_dist / (label_dist.max().detach() + 1e-8)\n",
         "\n",
-        "    # Calcola matrice dei pesi congiunti (prodotto dei pesi: w_i * w_j)\n",
-        "    # Se uno dei due esempi è rumoroso (peso basso), la coppia vale poco.\n",
+        "   \n",
         "    weights = weights.view(-1, 1)\n",
         "    pair_weights = torch.matmul(weights, weights.t())\n",
         "\n",
-        "    # MSE pesato sulla struttura\n",
         "    loss = (pair_weights * (emb_dist - label_dist) ** 2).mean()\n",
         "    return loss"
       ]
@@ -777,15 +773,14 @@
         "        outputs = model(**inputs)\n",
         "        logits = outputs.get(\"logits\")\n",
         "\n",
-        "        # 1. Calcolo Pesi (Più aggressivo)\n",
-        "        # Non normalizziamo sulla media per ora, lasciamo che i pesi bassi abbattano la loss\n",
+        "        # 1. Compute weights from stdevs\n",
         "        weights = torch.exp(-self.uncertainty_scale * stdevs)\n",
         "\n",
         "        # 2. Weighted SmoothL1\n",
         "        if labels is not None and logits is not None:\n",
         "            loss_fct = nn.SmoothL1Loss(beta=1.0, reduction='none')\n",
         "            per_sample_loss = loss_fct(logits, labels)\n",
-        "            smooth_l1_loss = (per_sample_loss * weights).mean() # Loss abbattuta se dati rumorosi\n",
+        "            smooth_l1_loss = (per_sample_loss * weights).mean() \n",
         "        else:\n",
         "            smooth_l1_loss = outputs.get(\"loss\")\n",
         "\n",
@@ -1082,16 +1077,16 @@
         "\n",
         "optimizer = Adafactor(\n",
         "    model.parameters(),\n",
-        "    lr=3e-4,                    # puoi regolare questo valore\n",
+        "    lr=3e-4,                    \n",
         "    scale_parameter=False,\n",
         "    relative_step=False\n",
         ")\n",
         "\n",
         "scheduler = ReduceLROnPlateau(\n",
         "    optimizer,\n",
-        "    mode='min',      # 'min' perché monitoriamo la loss (che deve scendere)\n",
-        "    factor=0.5,      # Dimezza il LR quando la loss stalla\n",
-        "    patience=2,      # Aspetta 2 valutazioni prima di tagliare\n",
+        "    mode='min',      \n",
+        "    factor=0.5,      \n",
+        "    patience=2,      \n",
         ")\n",
         "\n",
         "\n",
@@ -1099,8 +1094,7 @@
         "    output_dir=\"./results_t5_regression\",\n",
         "    eval_strategy=\"epoch\",\n",
         "    save_strategy=\"epoch\",\n",
-        "    # Adafactor manages its own learning rate when scale_parameter=True\n",
-        "    learning_rate=3e-4, # Removed\n",
+        "    learning_rate=3e-4,\n",
         "    per_device_train_batch_size=6,\n",
         "    per_device_eval_batch_size=6,\n",
         "    num_train_epochs=10,\n",
@@ -1117,8 +1111,7 @@
         "    save_safetensors=False,\n",
         "    remove_unused_columns=False,\n",
         "    dataloader_num_workers=0,\n",
-        "    # Adafactor manages its own learning rate schedule, so no external scheduler is needed\n",
-        "    lr_scheduler_type=\"cosine\", # Removed\n",
+        "    lr_scheduler_type=\"cosine\",\n",
         ")\n",
         "\n",
         "trainer = CustomTrainer(\n",
@@ -1130,23 +1123,22 @@
         "    tokenizer=tokenizer,\n",
         "    compute_metrics=compute_metrics,\n",
         "    cont_weight=0.2,\n",
-        "    uncertainty_scale=0.5 #per la differenza di peso della stdev\n",
+        "    uncertainty_scale=0.5 \n",
         ")\n",
         "\n",
         "\n",
-        "print(\"\\nInizio training...\")\n",
+        "print(\"\\nBegin of the training...\")\n",
         "trainer.train()\n",
         "\n",
-        "print(\"\\n✅ Training completato!\")\n",
+        "print(\"\\n✅ Training ended!\")\n",
         "\n",
-        "# Salva il modello finale\n",
         "trainer.save_model(\"./final_model\")\n",
-        "print(\"Modello salvato in ./final_model\")"
+        "print(\"Model saved in ./final_model\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1209,7 +1201,7 @@
         }
       ],
       "source": [
-        "# Evaluation dettagliata\n",
+        "\n",
         "print(\"\\n🔍 Running evaluation on dev set...\")\n",
         "\n",
         "model.eval()\n",
