--- a/src/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
+++ b/src/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
@@ -23,7 +23,7 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
-        "from transformers import T5EncoderModel, AutoTokenizer # Added this import\n",
+        "from transformers import T5EncoderModel, AutoTokenizer \n",
         "from datasets import load_dataset, Dataset\n",
         "from peft import LoraConfig, get_peft_model, TaskType\n",
         "from sklearn.metrics import mean_squared_error, accuracy_score\n",
@@ -36,7 +36,6 @@
         "from google.colab import drive\n",
         "\n",
         "\n",
-        "# Monta Drive\n",
         "drive.mount('/content/drive')\n"
       ]
     },
