--- a/src/estrattore_prediction.ipynb
+++ b/src/estrattore_prediction.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,7 +47,7 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "!unzip /content/drive/MyDrive/t5eval_stdev6.zip\n"
+        "!unzip /content/drive/MyDrive/LLM_Project/t5eval.zip\n"
       ]
     },
     {
@@ -336,15 +336,13 @@
         "import json\n",
         "from tqdm import tqdm\n",
         "\n",
-        "# ===========================\n",
-        "# 1. RICARICA MODELLO SALVATO\n",
-        "# ===========================\n",
+        "\n",
         "print(\"\\n🔄 Ricaricamento modello salvato...\")\n",
-        "model_name = \"google/flan-t5-xl\"  # Torniamo a base\n",
-        "# Ricostruisci l'architettura\n",
+        "model_name = \"google/flan-t5-xl\"  \n",
+        "#rebuild architecture\n",
         "model = T5EncoderForRegression(model_name)\n",
         "tokenizer= AutoTokenizer.from_pretrained('t5eval_contrastive')\n",
-        "# Riapplica LoRA con gli stessi parametri del training\n",
+        "#Apply LoRA again with same training parameters\n",
         "lora_config = LoraConfig(\n",
         "    task_type=TaskType.FEATURE_EXTRACTION,\n",
         "    r=32,\n",
@@ -359,7 +357,7 @@
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
-        "# Carica i pesi salvati\n",
+        "# charge saved weights\n",
         "weights_path = \"./t5eval_contrastive/pytorch_model.bin\"\n",
         "state_dict = torch.load(weights_path, map_location=device)\n",
         "model.load_state_dict(state_dict)\n",
@@ -368,11 +366,9 @@
         "model.eval()\n",
         "print(\"✅ Modello ricaricato con successo!\")\n",
         "\n",
-        "# ===========================\n",
-        "# 2. FUNZIONE DI PREDIZIONE\n",
-        "# ===========================\n",
+        "\n",
         "def get_prediction_regression(precontext, sentence, ending, homonym, judged_meaning, example_sentence):\n",
-        "    \"\"\"Genera predizione per un singolo esempio\"\"\"\n",
+        "    \"\"\"Geneerate prediction for a single example\"\"\"\n",
         "    story = f\"{precontext}\\n{sentence}\\n{ending}\"\n",
         "\n",
         "    prompt = f\"\"\"Rate how plausible the meaning is in the context.\n",
@@ -403,16 +399,14 @@
         "        )\n",
         "        pred_score = outputs[\"logits\"].item()\n",
         "\n",
-        "    # Clamp tra 1 e 5 provo tra 1.99 e 4.01 per giocare con la stdev e ottenere risultati migliori\n",
+        "    # Clamp beetween 1.99 and 4.01 to play with stdev and get better results\n",
         "    return max(1.99, min(4.01, pred_score))\n",
         "\n",
-        "# ===========================\n",
-        "# 3. GENERAZIONE PREDIZIONI\n",
-        "# ===========================\n",
-        "print(\"\\n🔮 Generazione predizioni sul test set...\")\n",
         "\n",
-        "# Carica test.json\n",
-        "test_path = 'dataset/test.json'\n",
+        "\n",
+        "\n",
+        "# upload test.json\n",
+        "test_path = '/content/drive/MyDrive/LLM_Project/test.json'\n",
         "with open(test_path, \"r\") as f:\n",
         "    test_data = json.load(f)\n",
         "\n",
@@ -439,21 +433,13 @@
         "        \"prediction\": pred\n",
         "    })\n",
         "\n",
-        "# ===========================\n",
-        "# 4. SALVATAGGIO FILE\n",
-        "# ===========================\n",
+        "\n",
         "output_file = \"predictions.jsonl\"\n",
         "with open(output_file, \"w\") as f:\n",
         "    for entry in predictions:\n",
         "        f.write(json.dumps(entry) + \"\\n\")\n",
         "\n",
-        "print(f\"\\n✅ File {output_file} creato con successo con {len(predictions)} predizioni!\")\n",
-        "print(f\"📊 Range predizioni: [{min(p['prediction'] for p in predictions):.2f}, {max(p['prediction'] for p in predictions):.2f}]\")\n",
-        "\n",
-        "# Mostra prime 5 predizioni come verifica\n",
-        "print(\"\\n🔍 Prime 5 predizioni:\")\n",
-        "for p in predictions[:5]:\n",
-        "    print(f\"  ID: {p['id']}, Prediction: {p['prediction']:.4f}\")"
+        "\n"
       ]
     },
     {
