--- a/src/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
+++ b/src/taskflant5_ContrastiveLoss_stdev_prompt.ipynb
@@ -247,14 +247,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ztjg8ikmALRE"
       },
       "outputs": [],
       "source": [
         "def build_prompt(example):\n",
-        "    \"\"\"Costruisce prompt per batch di esempi\"\"\"\n",
+        "    \"\"\"Create prompts for plausibility rating.\"\"\"\n",
         "    prompts = []\n",
         "    batch_size = len(example[\"precontext\"])\n",
         "\n",
@@ -614,8 +614,8 @@
       ],
       "source": [
         "# Percorsi originali\n",
-        "train_path = 'dataset/train.json'\n",
-        "dev_path   = 'dataset/dev.json'\n",
+        "train_path = '/content/drive/MyDrive/LLM_Project/train.json'\n",
+        "dev_path   = '/content/drive/MyDrive/LLM_Project/dev.json'\n",
         "\n",
         "with open(train_path, \"r\") as f:\n",
         "    data_train = json.load(f)\n",
@@ -1217,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1247,8 +1247,8 @@
         "tokenizer.save_pretrained(\"./t5eval_contrastive\")\n",
         "print(\"Modello salvato in t5eval_contrastive\")\n",
         "\n",
-        "!zip -r t5eval_stdev6.zip t5eval_contrastive\n",
-        "!cp \"t5eval_stdev6.zip\" \"/content/drive/MyDrive/Colab Notebooks/LLM_Project/\"\n",
+        "!zip -r t5eval.zip t5eval_contrastive\n",
+        "!cp \"t5eval.zip\" \"/content/drive/MyDrive/LLM_Project/\"\n",
         "print(\"Evaluation results saved in zip\")"
       ]
     }
